style: fix spacing issue between manifesto and campaign poster

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 }
 
 .hero-poster-container {
-    margin: -2rem auto 6rem;
+    margin: 8rem auto 6rem;
     max-width: 100%;
     border-radius: 2.5rem;
     overflow: hidden;
